@@ -3,52 +3,30 @@ package com.ltx.entity.dto;
 import cn.hutool.core.bean.BeanUtil;
 import cn.hutool.core.collection.CollUtil;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
-import lombok.Data;
 
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * 分页结果
  *
+ * @param total 总记录数
+ * @param pages 总页数
+ * @param list  当前页的数据列表
  * @author tianxing
  */
-@Data
-public class PageDTO {
+public record PageDTO<T>(Long total, Long pages, List<T> list) {
 
-    // 总记录数
-    private Long total;
-    // 总页数
-    private Long pages;
-    // 当前页的数据列表
-    private List<?> list;
-
-    public static PageDTO of(Page<?> page, Class<?> targetType) {
-        PageDTO pageDTO = new PageDTO();
-        pageDTO.setTotal(page.getTotal());
-        pageDTO.setPages(page.getPages());
+    public static <T> PageDTO<T> of(Page<?> page, Class<T> targetType) {
         List<?> records = page.getRecords();
-        if (CollUtil.isEmpty(records)) {
-            pageDTO.setList(Collections.emptyList());
-            return pageDTO;
-        }
-        pageDTO.setList(BeanUtil.copyToList(records, targetType));
-        return pageDTO;
+        List<T> list = CollUtil.isEmpty(records) ? Collections.emptyList() : BeanUtil.copyToList(records, targetType);
+        return new PageDTO<>(page.getTotal(), page.getPages(), list);
     }
 
-    public static <PO, VO> PageDTO of(Page<PO> page, Function<PO, VO> function) {
-        PageDTO pageDTO = new PageDTO();
-        pageDTO.setTotal(page.getTotal());
-        pageDTO.setPages(page.getPages());
+    public static <PO, VO> PageDTO<VO> of(Page<PO> page, Function<PO, VO> function) {
         List<PO> records = page.getRecords();
-        if (CollUtil.isEmpty(records)) {
-            pageDTO.setList(Collections.emptyList());
-            return pageDTO;
-        }
-        // 自定义转换逻辑
-        pageDTO.setList(records.stream().map(function).collect(Collectors.toList()));
-        return pageDTO;
+        List<VO> list = CollUtil.isEmpty(records) ? Collections.emptyList() : records.stream().map(function).toList();
+        return new PageDTO<>(page.getTotal(), page.getPages(), list);
     }
 }
